testsuite/tests/indexed-types/should_fail/T2157.stderr
T2157.hs:7:15: error: [GHC-27346]
    • The type synonym ‘S’ should have 2 arguments, but has been given 1
    • In the type family instance declaration for ‘F’

